# cubie

./: .buildinfo  .codecov.yml  .gitattributes  .gitignore  A1_func_inventory.md  A2_func_inventory.md  A3_func_inventory.md  A4_func_inventory.md  A5_func_inventory.md  A6_func_inventory.md  A7_func_inventory.md  AGENTS.md  ARCHITECTURE_DIAGRAMS_141.md  Algorithms.html  CACHING_VERIFICATION.md  CELLMLMANIP_PATCH_ANALYSIS.md  CELLML_VARIABLE_FLOW_DIAGRAMS.md  CHANGELOG.md  CHUNKED_TEST_CONCURRENCY_ANALYSIS.md  CHUNKING_INVESTIGATION_REPORT.md  CORRECTED_ANALYSIS.md  CUDA_CACHING_ANALYSIS.md  CUDA_EVENT_ANALYSIS.md  FIRK_PERFORMANCE_DIFF_REPORT.md  IMPLEMENTATION_PLAN_141.md  INTERPOLANTS_INVESTIGATION.md  INTERPOLANTS_SUMMARY.md  MLIR_MIGRATION.md  PLANNING_README_141.md  PLANNING_SUMMARY_141.md  ROSENBROCK_COEFFICIENT_DIAGRAM.txt  ROSENBROCK_IMPLEMENTATION_REPORT.md  ROSENBROCK_README.md  ROSENBROCK_REPORT_SUMMARY.md  SOLVE_END_PROCESS_ANALYSIS.md  Test Results - CUDA_simulated.html  UNITS_DOCUMENTATION.md  _utils.py  batch_input_handler_itertools_review.md  blackbox_solve_2.py  (+29 more)
.devcontainer/: devcontainer.json
.doctrees/: Algorithms.doctree  cuda.doctree  drivers.doctree  environment.pickle  getting_started.doctree  index.doctree  systems.doctree  usage.doctree  userfunctions.doctree
.doctrees/API_reference/: index.doctree  memory.doctree
.doctrees/__intersphinx_cache__/: numba_objects.inv
.doctrees/api/: MonteCarlo.doctree  Sampling.doctree  SystemModels.doctree  Utils.doctree  batchsolving.doctree  cubie.doctree  index.doctree  integrators.doctree
.doctrees/developer_guide/: codegen.doctree  testing.doctree
.doctrees/project_structure/: src.doctree  src_cubie.doctree  src_cubie_batchsolving.doctree  src_cubie_batchsolving_arrays.doctree  src_cubie_egg_info.doctree  src_cubie_integrators.doctree  src_cubie_integrators_algorithms.doctree  src_cubie_integrators_loops.doctree  src_cubie_integrators_matrix_free_solvers.doctree  src_cubie_integrators_step_control.doctree  src_cubie_memory.doctree  src_cubie_odesystems.doctree  src_cubie_odesystems_symbolic.doctree  src_cubie_odesystems_systems.doctree  src_cubie_outputhandling.doctree  src_cubie_outputhandling_summarymetrics.doctree
.doctrees/user_guide/: Algorithms.doctree  algorithms.doctree  batching.doctree  caching.doctree  cellml.doctree  choosing_algorithms.doctree  cuda.doctree  drivers.doctree  index.doctree  memory.doctree  optional_arguments.doctree  results.doctree  solving.doctree  speed.doctree  systems.doctree  timing.doctree  troubleshooting.doctree  userfunctions.doctree
.github/: AGENT_INVOCATION_INVESTIGATION.md  TEST_AGENT_INVOCATION.md  TEST_RESULTS.md  copilot-instructions.md  mcp.json  runs-on.yml
.junie/: guidelines.md
API_reference/: index.html  memory.html
_modules/: index.html
_sources/: cuda.rst.txt  drivers.rst.txt  getting_started.rst.txt  index.rst.txt  usage.rst.txt  userfunctions.rst.txt
active_plans/: numba_cuda_caching.py  numba_cuda_dispatcher.py
api/: MonteCarlo.html  Sampling.html  SystemModels.html  Utils.html  batchsolving.html  cubie.html  index.html  integrators.html
benchmarks/: ab_gate.py  dense_prediction_ratio_sweep.py  lorenz_mean_runtime.py  memory_location_sweep.py  ncu_algorithm_comparison.py  ncu_algorithm_worker.py  vendor_julia_reference.py
blackbox/: __init__.py  blackbox1  blackbox2
ci/: Dockerfile  requirements.ci.txt
developer_guide/: adding_algorithms.html  adding_metrics.html  architecture.html  buffer_registry.html  codegen.html  index.html  testing.html
docs/: COMPILER_UNROLLING_RECOMMENDATIONS.md  DIRK_IMPLEMENTATION_ANALYSIS.md  DIRK_MATHEMATICAL_TRACE.md  Environment_setup.md  GPUODEBenchmarks_Integration.md  chunk_axis_analysis.md  conf.py  cubie_benchmark.md  error_vector_analysis.md  gustafsson_controller_analysis.md  index.rst  time_axis_chunking_analysis.md  usage.rst
packer/: windows-gpu.pkr.hcl
project_structure/: src.html  src_cubie.html  src_cubie_batchsolving.html  src_cubie_batchsolving_arrays.html  src_cubie_egg_info.html  src_cubie_integrators.html  src_cubie_integrators_algorithms.html  src_cubie_integrators_loops.html  src_cubie_integrators_matrix_free_solvers.html  src_cubie_integrators_step_control.html  src_cubie_memory.html  src_cubie_odesystems.html  src_cubie_odesystems_symbolic.html  src_cubie_odesystems_systems.html  src_cubie_outputhandling.html  src_cubie_outputhandling_summarymetrics.html
pytest_plugins/: numba_patches_plugin.py
ref/: fabbri_linder_cell.py  fabbri_linder_cell_globalconsts.py  fabbri_linder_cell_isocas.py  fabbri_linder_cell_isocas_only.py
scratch_profile/: bench_ncu_bicgstab.py  bench_ncu_bigsys.py
scripts/: crank_nicolson_analysis.py
src/: pytest_report_json_to_jsonl.py  refactor_notes.md  todo.py
tests/: README.md  TEST_STRUCTURE_GUIDE.md  _convert_inventory.py  _inventory.json  _precompile_hashing.py  _utils.py  all_in_one.py  benchmark_compile_time.py  conftest.py  precompile_plugin.py  query_inventory.py  readme.md  scratch_threecm_codegen.py  system_fixtures.py  system_override_report.md  test_CUDAFactory.py  test_SystemModels.py  test_SystemParameters.py  test_SystemValues.py  test_all_in_one_strides.py  test_array_interpolator.py  test_batch_configurator.py  test_buffer_registry.py  test_buffer_settings.py  test_cache_config.py  test_cache_invalidation_minimal.py  test_cache_root.py  test_compilation_timing.py  test_cost_dashboard.py  test_cubie_cache.py  test_cuda_simsafe.py  test_driver_array_partition.py  test_env.py  test_euler.py  test_init_reexports.py  test_memmgmt.py  test_numba_cuda_compat.py  test_output_functions.py  test_package_source_hash.py  test_precompile_hashing.py  (+5 more)
theory/: cuda.html  index.html  jacobians.html  numerical_integration.html  solvers.html
user_guide/: Algorithms.html  algorithms.html  batching.html  caching.html  cellml.html  choosing_algorithms.html  cuda.html  drivers.html  index.html  memory.html  optional_arguments.html  results.html  solving.html  speed.html  systems.html  timing.html  troubleshooting.html  userfunctions.html
(+1926 files in other folders)
