[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where    = ["src"]
exclude  = ["./tests/*"]

[tool.setuptools.package-data]
# Ship the vendored cellmlmanip schema/unit data and license.
"cubie.vendored.cellmlmanip" = ["data/*", "version.txt", "LICENSE"]

[project]
name = "cubie"
version = "0.1.1"
description = "CUDA Batch Integration Engine."
authors = [
    { name="Chris Cameron" }
]
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["src/LICEN[CS]E*"]
dependencies = [
    "numpy>=2.0", # vendoring cellmlmanip lifts the former <2.0 cap
    "numba",
    "numba-cuda", # frontend; toolkit resolved from wheels (cuda12/cuda13
                  # extras) or an existing system CUDA install
    "attrs",
    "sympy>=1.13.0",
    # cellmlmanip is vendored under cubie.vendored.cellmlmanip (it pins
    # Pint<0.20, incompatible with the numpy>=2 required above). These
    # are its runtime dependencies. Pint>=0.24 is the first release that
    # supports numpy 2 and provides the pint.facets.plain API the
    # vendored units.py imports.
    "lxml",
    "networkx",
    "Pint>=0.24",
    "rdflib",
]

[project.urls]
Homepage = "https://github.com/ccam80/cubie.git"
Issues = "https://github.com/ccam80/cubie/issues"

[project.optional-dependencies]
# CuPy is cubie's single device memory allocator on a real GPU, so the
# cuda12/cuda13 lanes pull in the matching cupy build alongside the
# toolkit wheels.
cuda12 = ["numba-cuda[cu12]", "cupy-cuda12x"] # CUDA 12 toolkit + CuPy
cuda13 = ["numba-cuda[cu13]", "cupy-cuda13x"] # CUDA 13 toolkit + CuPy
test = [
    "pytest",
    "pytest-cov",
    "pytest-durations",
    "pytest-xdist[psutil]",
    "flake8",
    "ruff",
    "pandas",
    "matplotlib",
    "scipy",
]
# dev defaults to the CUDA 12 lane; flip to dev13 once the CUDA 13
# matrix is verified.
dev12 = ["cubie[cuda12,test]"]
dev13 = ["cubie[cuda13,test]"]
dev = ["cubie[dev12]"]
optional = [
    "pandas",
    "matplotlib"
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
markers = [
    "nocudasim: Will fail if run on the GPU simulator, only test on real GPU",
    "cupy: Requires optional dependency CuPy, will fail if not installed",
    "slow: Marks tests that are slow to run, can be skipped with -m 'not slow'",
    "specific_algos: Marks tests covering non-default algorithm tableau aliases",
    "sim_only: Marks tests that can only run on the CUDA simulator (debug tests only, otherwise what's the point?)"
]
addopts = [
    "--import-mode=importlib",
    "-n8",
    "-ra",
    "--pytest-durations=0",
    "--cov=cubie",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::numba.core.errors.NumbaPerformanceWarning",
]

[tool.coverage.run]
#source = ["cubie"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Vendored third-party code (cellmlmanip, numba-cuda cache);
    # not cubie's tested surface.
    "*/vendored/cellmlmanip/*",
    "*/vendored/numba_cuda_cache.py",
    # Compile-time numba-cuda patches; covered by the pull requests
    # submitted to numba-cuda-mlir.
    "*/_numba_cuda_compat.py",
]
relative_files = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "no cover: start(?s:.)*?no cover: stop",
    "no cover: start(?s:.)*?no cover: end",
    "if environ\\.get\\(:(?s:.)*?else", # omit cudasim checks - possibly too broad
    "if \\(environ\\.get\\(:(?s:.)*?else",
    "def __repr__",
    "if self\\.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \\.__main__\\.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    'if environ\\.get\\("NUMBA_ENABLE_CUDASIM", "0"\\) == "1":'
]

ignore_errors = true
show_missing = true

[tool.coverage.html]
directory = "./tests/htmlReport"

[tool.ruff]
line-length = 79

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.format]
docstring-code-format = true

