[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where    = ["src"]
exclude  = ["./tests/*"]

[tool.setuptools.package-data]
# Ship the vendored cellmlmanip schema/unit data and license.
"cubie.vendored.cellmlmanip" = ["data/*", "version.txt", "LICENSE"]

[project]
name = "cubie"
version = "0.3.1"
description = "CUDA Batch Integration Engine."
authors = [
    { name="Chris Cameron" }
]
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["src/LICEN[CS]E*"]
dependencies = [
    "numpy>=2.0", # vendoring cellmlmanip lifts the former <2.0 cap
    "numba",
    "attrs",
    "sympy>=1.13.0",
    # cellmlmanip is vendored under cubie.vendored.cellmlmanip (it pins
    # Pint<0.20, incompatible with the numpy>=2 required above). These
    # are its runtime dependencies. Pint>=0.24 is the first release that
    # supports numpy 2 and provides the pint.facets.plain API the
    # vendored units.py imports.
    "lxml",
    "networkx",
    "Pint>=0.24",
    "rdflib",
]

[project.urls]
Homepage = "https://github.com/ccam80/cubie.git"
Issues = "https://github.com/ccam80/cubie/issues"

[project.optional-dependencies]
# The CUDA backend is chosen by extra: one of the mlir*/cuda* lanes
# installs numba-cuda-mlir (the default backend) or numba-cuda (the
# deprecated fallback: unexpected errors, Python 3.10, or the CUDA
# simulator). A backendless install fails at import with instructions
# (cubie.cuda_backend). CuPy is cubie's single device memory
# allocator on a real GPU, so the toolkit lanes pull in the matching
# cupy build alongside the toolkit wheels. The bare 'mlir'/'cuda'
# extras install a backend without toolkit wheels, for machines with
# a system CUDA install. The mlir lanes need Python >= 3.11
# (enforced by the numba-cuda-mlir wheel).
#
# The mlir* extras install cubie-numba-cuda-mlir: cubie's build of
# numba-cuda-mlir carrying the native (C++) fixes pending upstream,
# from the cubie-wheel branch of ccam80/numba-cuda-mlir (runbook:
# CUBIE_WHEEL.md there). Same numba_cuda_mlir import package — never
# co-install it with the stock wheel. Python-side fixes are applied
# at runtime by cubie._mlir_compat instead.
mlir = ["cubie-numba-cuda-mlir>=0.4.1.1"] # MLIR backend, system toolkit
mlir-cuda12 = ["cubie-numba-cuda-mlir[cu12]>=0.4.1.1", "cupy-cuda12x"]
mlir-cuda13 = ["cubie-numba-cuda-mlir[cu13]>=0.4.1.1", "cupy-cuda13x"]
cuda = ["numba-cuda"] # deprecated numba-cuda backend, system toolkit
cuda12 = ["numba-cuda[cu12]", "cupy-cuda12x"] # CUDA 12 toolkit + CuPy
cuda13 = ["numba-cuda[cu13]", "cupy-cuda13x"] # CUDA 13 toolkit + CuPy
test = [
    "pytest",
    "pytest-cov",
    "pytest-durations",
    "pytest-xdist[psutil]",
    "flake8",
    "ruff",
    "pandas",
    "matplotlib",
    "scipy",
]
# dev defaults to the CUDA 12 lane; flip to dev13 once the CUDA 13
# matrix is verified. The dev/dev12/dev13 lanes stay on the
# deprecated numba-cuda backend: CUDASIM dev and the nocuda CI lane
# need it, and it stays CI-covered while deprecated. Use dev-mlir*
# for a default-backend dev install.
dev12 = ["cubie[cuda12,test]"]
dev13 = ["cubie[cuda13,test]"]
dev-mlir12 = ["cubie[mlir-cuda12,test]"]
dev-mlir13 = ["cubie[mlir-cuda13,test]"]
dev = ["cubie[dev12]"]
optional = [
    "pandas",
    "matplotlib"
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
markers = [
    "nocudasim: Will fail if run on the GPU simulator, only test on real GPU",
    "cupy: Requires optional dependency CuPy, will fail if not installed",
    "slow: Marks tests that are slow to run, can be skipped with -m 'not slow'",
    "specific_algos: Marks tests covering non-default algorithm tableau aliases",
    "sim_only: Marks tests that can only run on the CUDA simulator (debug tests only, otherwise what's the point?)"
]
addopts = [
    "--import-mode=importlib",
    "-n8",
    # loadgroup + the conftest ordering hook keep each session
    # param-set's tests on one worker so each set compiles once.
    "--dist=loadgroup",
    "-ra",
    "--pytest-durations=0",
    "--cov=cubie",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::numba.core.errors.NumbaPerformanceWarning",
]

[tool.coverage.run]
# Scope measurement to cubie for every entry point: pytest-cov's
# --cov=cubie locally, and `coverage run` / worker process-startup in
# GPU CI (which read this instead of the CLI flag).
source = ["cubie"]
# Each pytest-xdist worker (and, under `coverage run`, the main
# process) writes its own data file to combine; required for the GPU
# CI coverage path that starts coverage before pytest loads.
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Vendored third-party code (cellmlmanip, numba-cuda cache);
    # not cubie's tested surface.
    "*/vendored/cellmlmanip/*",
    "*/vendored/numba_cuda_cache.py",
    # Compile-time backend patches; covered by the pull requests
    # submitted to numba-cuda and numba-cuda-mlir.
    "*/_numba_cuda_compat.py",
    "*/_mlir_compat.py",
]
relative_files = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "no cover: start(?s:.)*?no cover: stop",
    "no cover: start(?s:.)*?no cover: end",
    "if environ\\.get\\(:(?s:.)*?else", # omit cudasim checks - possibly too broad
    "if \\(environ\\.get\\(:(?s:.)*?else",
    "def __repr__",
    "if self\\.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \\.__main__\\.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    'if environ\\.get\\("NUMBA_ENABLE_CUDASIM", "0"\\) == "1":'
]

ignore_errors = true
show_missing = true

[tool.coverage.html]
directory = "./tests/htmlReport"

[tool.ruff]
line-length = 79

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.format]
docstring-code-format = true

